<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendEmailActivity">

    <EditText
        android:id="@+id/emails_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/email_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cc_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/cc_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/emails_input"
        app:layout_constraintStart_toStartOf="@+id/emails_input"
        app:layout_constraintTop_toBottomOf="@+id/emails_input" />

    <EditText
        android:id="@+id/bcc_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/bcc_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/cc_input"
        app:layout_constraintStart_toStartOf="@+id/cc_input"
        app:layout_constraintTop_toBottomOf="@+id/cc_input" />

    <EditText
        android:id="@+id/subject_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/subject_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/bcc_input"
        app:layout_constraintStart_toStartOf="@+id/bcc_input"
        app:layout_constraintTop_toBottomOf="@+id/bcc_input" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/content_input"
        app:layout_constraintStart_toStartOf="@+id/content_input" />

    <EditText
        android:id="@+id/content_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/attachIcon"
        app:layout_constraintEnd_toEndOf="@+id/subject_input"
        app:layout_constraintStart_toStartOf="@+id/subject_input"
        app:layout_constraintTop_toBottomOf="@+id/subject_input" />

    <ImageButton
        android:id="@+id/attachIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintStart_toStartOf="@+id/send_button"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/attachmentFileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/attachIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attachIcon"
        app:layout_constraintTop_toTopOf="@+id/attachIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>